#2213 General code cleanup
* Increase immutability
* Be concise
* Add documentation and comments